--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,16 @@
 language: node_js
-
 node_js:
-  - "0.12"
-
+- '0.12'
 before_install:
-  # Set Git config
-  - git config --global user.name "travis_bot"
-  - git config --global user.email mithvv@gmail.com
-  # Install Hexo
-  - npm install hexo -g
-  # Clone the repository
-  - git clone git@github.com:51offer/51offer.github.com.git
-
+- openssl aes-256-cbc -K $encrypted_4dbc5423f685_key -iv $encrypted_4dbc5423f685_iv
+  -in travis_key.enc -out travis_key -d
+- git config --global user.name "travis_bot"
+- git config --global user.email mithvv@gmail.com
+- npm install hexo -g
+- git clone git@github.com:51offer/51offer.github.com.git
 script:
-  - hexo generate
-  - hexo deploy
-
+- hexo generate
+- hexo deploy
 branches:
   only:
-    - blog
+  - blog
