--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '0.12'
 before_install:
 - openssl aes-256-cbc -K $encrypted_4dbc5423f685_key -iv $encrypted_4dbc5423f685_iv
-  -in .travis/travis_key.enc -out travis_key -d
+  -in .travis/travis_key.enc -out ~/.ssh/id_rsa -d
 # Set the permission of the key
 - chmod 600 ~/.ssh/id_rsa
   # Start SSH agent
