--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo
 
 # Site
-title: 51Offer
+title: 51offer
 subtitle: MobileBlogs
 description: 每周分享博客
 author: 移动组团队
